<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneActivityDesign</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cafeName">Вермишель</string>
    <string name="numComments">Отзывов нет</string>
    <string name="timeToArrive">5 минут</string>
    <string name="type">Кафе</string>
    <string name="workHours">10:00-23:00</string>
    <string name="adress">ул. Никитинская, 31, Воронеж, Воронежская область, 394018</string>
    <string name="call">Позвонить</string>
    <string name="save">Сохранить</string>
    <string name="share">Поделиться</string>

</resources>
