<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="0dp"
    android:paddingEnd="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:scrollbars="vertical"
    android:isScrollContainer="true"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cafeName"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numComments"
                    android:textColor="@android:color/darker_gray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/car"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeToArrive"
                    android:textColor="#0099cc"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/workHours"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/adress"
                android:textColor="#aaaaaa"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                >
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/phone"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#0099cc"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/star"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/save"
                        android:textColor="#0099cc"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/share"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#0099cc"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/map"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/photo"
                android:scaleType="centerInside"/>
        </LinearLayout>

        </LinearLayout>

</ScrollView>
